--- a/AntonWang/WebApi/WebService/WebService.csproj
+++ b/AntonWang/WebApi/WebService/WebService.csproj
@@ -92,6 +92,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\JsonCallbackAttribute.cs" />
+    <Compile Include="App_Start\JsonpMediaTypeFormatter.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Global.asax.cs">
