--- a/AntonWang/WebApi/WebService/packages.config
+++ b/AntonWang/WebApi/WebService/packages.config
@@ -4,5 +4,6 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.2" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" /> 
 </packages>
