--- a/AntonWang/WebApi/ProductOdata/ProductOdata.csproj
+++ b/AntonWang/WebApi/ProductOdata/ProductOdata.csproj
@@ -124,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Read.txt" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
