--- a/AntonWang/WebApi/ProductOdata/Web.config
+++ b/AntonWang/WebApi/ProductOdata/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="ProductsContext" connectionString="Data Source=.; 
-        Initial Catalog=ProductsContext; Integrated Security=True; MultipleActiveResultSets=True; 
-        AttachDbFilename=|DataDirectory|ProductsContext.mdf"
+        Initial Catalog=ProductsContext; Integrated Security=True; MultipleActiveResultSets=True; "
+        
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
