--- a/AntonWang/WebApi/WebDemo/WebDemo.csproj
+++ b/AntonWang/WebApi/WebDemo/WebDemo.csproj
@@ -87,6 +87,8 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
+    <Content Include="Html\cors.html" />
+    <Content Include="Html\OdataActionFunction.html" />
     <Content Include="Html\OdataTest.html" />
     <Content Include="Javascript\ajaxcdr.js" />
     <Content Include="Javascript\ajaxcdr.swf" />
@@ -113,6 +115,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\CrossDomain\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -123,7 +126,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\CrossDomain\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
