--- a/AntonWang/WebApi/ApiDemo/ApiDemo.csproj
+++ b/AntonWang/WebApi/ApiDemo/ApiDemo.csproj
@@ -121,7 +121,12 @@
       <HintPath>..\..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\Component\Tools\Tools.csproj">
+      <Project>{84A3E816-7AF4-4860-80FC-412607502BAC}</Project>
+      <Name>Tools</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -184,12 +189,6 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Tools\Tools.csproj">
-      <Project>{84a3e816-7af4-4860-80fc-412607502bac}</Project>
-      <Name>Tools</Name>
-    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
