--- a/AntonWang/WebApi/ProductOdata/ProductOdata.csproj
+++ b/AntonWang/WebApi/ProductOdata/ProductOdata.csproj
@@ -181,7 +181,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Tools\Tools.csproj">
+    <ProjectReference Include="..\..\Component\Tools\Tools.csproj">
       <Project>{84A3E816-7AF4-4860-80FC-412607502BAC}</Project>
       <Name>Tools</Name>
     </ProjectReference>
