--- a/AntonWang/WebApi/WebService/WebService.csproj
+++ b/AntonWang/WebApi/WebService/WebService.csproj
@@ -115,7 +115,7 @@
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Tools\Tools.csproj">
+    <ProjectReference Include="..\..\Component\Tools\Tools.csproj">
       <Project>{84A3E816-7AF4-4860-80FC-412607502BAC}</Project>
       <Name>Tools</Name>
     </ProjectReference>
