--- a/AntonWang/WebApi/ApiDemo/ApiDemo.csproj
+++ b/AntonWang/WebApi/ApiDemo/ApiDemo.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\AntiCSRFController.cs" />
     <Compile Include="Controllers\CrossDomainController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -189,6 +190,10 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+    <Content Include="Views\Home\AntiCSRF.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\AntiCSRF\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
