--- a/AntonWang/WebApi/WebDemo/WebDemo.csproj
+++ b/AntonWang/WebApi/WebDemo/WebDemo.csproj
@@ -116,6 +116,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\CrossDomain\Index.cshtml" />
+    <Content Include="Views\AntiCSRF\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
