--- a/AntonWang/Web/Demo.Web/Demo.Web.csproj
+++ b/AntonWang/Web/Demo.Web/Demo.Web.csproj
@@ -110,6 +110,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Areas\Knockout\Controllers\CategoryController.cs" />
     <Compile Include="Areas\Knockout\Controllers\ProductController.cs" />
     <Compile Include="Areas\Knockout\Controllers\SupplierController.cs" />
     <Compile Include="Areas\Knockout\KnockoutAreaRegistration.cs" />
@@ -178,6 +179,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Knockout\Views\Supplier\Edit.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Knockout\Views\Product\Edit.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
