--- a/AntonWang/WebApi/OdataService/packages.config
+++ b/AntonWang/WebApi/OdataService/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Cors" version="5.2.2" targetFramework="net451" />
-  <package id="Microsoft.AspNet.OData" version="5.3.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.OData" version="5.4.0-beta" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client.zh-Hans" version="5.2.2" targetFramework="net451" />
@@ -11,8 +11,8 @@
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost.zh-Hans" version="5.0.0" targetFramework="net451" />
-  <package id="Microsoft.OData.Core" version="6.5.0" targetFramework="net451" />
-  <package id="Microsoft.OData.Edm" version="6.5.0" targetFramework="net451" />
-  <package id="Microsoft.Spatial" version="6.5.0" targetFramework="net451" />
+  <package id="Microsoft.OData.Core" version="6.9.0" targetFramework="net451" />
+  <package id="Microsoft.OData.Edm" version="6.9.0" targetFramework="net451" />
+  <package id="Microsoft.Spatial" version="6.9.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
 </packages>
