--- a/AntonWang/Web/ClintWeb/Web.config
+++ b/AntonWang/Web/ClintWeb/Web.config
@@ -14,4 +14,16 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IUploadService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:7493/Svc/UploadFile.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IUploadService"
+        contract="UploadFileService.IUploadService" name="BasicHttpBinding_IUploadService" />
+    </client>
+  </system.serviceModel>
 </configuration>
