--- a/AntonWang/Web/ClintWeb/Web.config
+++ b/AntonWang/Web/ClintWeb/Web.config
@@ -17,7 +17,7 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IUploadService" />
+        <binding name="BasicHttpBinding_IUploadService" messageEncoding="Mtom" transferMode="Streamed" />
       </basicHttpBinding>
     </bindings>
     <client>
