--- a/AntonWang/Web/WcfServiceWeb/Web.config
+++ b/AntonWang/Web/WcfServiceWeb/Web.config
@@ -17,12 +17,12 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IUploadService" maxReceivedMessageSize="10485760" />
+        <binding name="BasicHttpBinding_IUploadService" messageEncoding="Mtom" transferMode="Streamed" maxReceivedMessageSize="10485760" />
       </basicHttpBinding>
     </bindings>
     <services>
       <service behaviorConfiguration="metadataBehavior" name="UploadService">
-        <endpoint binding="basicHttpBinding" contract="IUploadContract"  bindingConfiguration="BasicHttpBinding_IUploadService"></endpoint>
+        <endpoint binding="basicHttpBinding" contract="IUploadContract"   bindingConfiguration="BasicHttpBinding_IUploadService"></endpoint>
       </service>
     </services>
     <behaviors>
