--- a/AntonWang/Web/WcfServiceWeb/WcfServiceWeb.csproj
+++ b/AntonWang/Web/WcfServiceWeb/WcfServiceWeb.csproj
@@ -93,12 +93,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Contracts\IUploadService.cs" />
+    <Compile Include="Contracts\IUploadService.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\UploadModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Class1Service.cs" />
     <Compile Include="Services\UploadService.cs" />
   </ItemGroup>
   <ItemGroup>
