--- a/AntonWang/Web/Demo.Web/Demo.Web.csproj
+++ b/AntonWang/Web/Demo.Web/Demo.Web.csproj
@@ -154,7 +154,9 @@
     <Content Include="Areas\Knockout\Views\Product\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\Index.cshtml" />
