--- a/AntonWang/MyConsole/App.config
+++ b/AntonWang/MyConsole/App.config
@@ -8,6 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
+	  <add name="Log4netConnectionString" providerName="System.Data.SqlClient"
+         connectionString="Data Source=.;Initial Catalog=DBErrorLogs;Persist Security Info=True;User ID=sa;Password=123" />
     <add name="MeetingRoomEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MeetingRoom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
