--- a/AntonWang/Web/WcfServiceWeb/Web.config
+++ b/AntonWang/Web/WcfServiceWeb/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -7,7 +7,7 @@
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
-     <add key="ClientValidationEnabled" value="true" />
+    <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
@@ -22,7 +22,7 @@
     </bindings>
     <services>
       <service behaviorConfiguration="metadataBehavior" name="UploadService">
-        <endpoint binding="basicHttpBinding" contract="IUploadContract"   bindingConfiguration="BasicHttpBinding_IUploadService"></endpoint>
+        <endpoint binding="basicHttpBinding" contract="IUploadContract" bindingConfiguration="BasicHttpBinding_IUploadService"></endpoint>
       </service>
     </services>
     <behaviors>
@@ -33,7 +33,14 @@
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
-      multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
