--- a/AntonWang/WebApi/ProductOdata/Web.config
+++ b/AntonWang/WebApi/ProductOdata/Web.config
@@ -9,25 +9,20 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ProductsContext" connectionString="Data Source=.; 
-        Initial Catalog=ProductsContext; Integrated Security=True; MultipleActiveResultSets=True; "
-        
-      providerName="System.Data.SqlClient" />
+    <add name="ProductsContext" connectionString="Data Source=.;          Initial Catalog=ProductsContext; Integrated Security=True; MultipleActiveResultSets=True; " providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
   </system.web>
-	<system.webServer>
-		<handlers>
-			<clear/>
-			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="/*"
-				verb="*" type="System.Web.Handlers.TransferRequestHandler"
-				preCondition="integratedMode,runtimeVersionv4.0" />
-		</handlers>
-	</system.webServer>
-	<runtime>
+  <system.webServer>
+    <handlers>
+      <clear />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="/*" verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer>
+  <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
