--- a/AntonWang/Web/RoleManage/RoleManage.csproj
+++ b/AntonWang/Web/RoleManage/RoleManage.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Function.cs" />
     <Compile Include="Models\Menu.cs" />
     <Compile Include="Models\MenuView.cs" />
@@ -157,7 +158,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Migrations\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
